--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
 <div id="header">
-<h1>Welcome to Gorakhpur City</h1>
+<h1>Welcome to my personal website</h1>
 </div>
 
 <div id="nav">
@@ -44,18 +44,17 @@ Property
 
 <div id="section">
 <h2>Intro</h2>
-<p>Gorakhpur is the default capital of Purvanchal. It is the most populous city in the Eastern UP, with a metropolitan area of over 13 million inhabitants.</p>
-<p>Mango and Litchis are it's greatest trading hallmarks due to which people are trying to flock here in large numbers. The property buying is a common theme here.</p>
+<p>i will post here about things related to politics and economics</p>
 
-<p>for property related details you can contact me at @xyz twitter handle.
+<p>you can contact me at @xyz twitter handle.
 </p>
 </div>
 
 <div id="footer">
-By Anubhav Rai and Deepak Prasad
+By Anubhav Rai 
 </div>
     
-<img src="kkk.jpeg" alt="Mountain View">
+
 
 </body>
 </html>
