--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 <div id="section">
 <h2>Intro</h2>
-<p>i will post here about things related to politics and economics</p>
+<p></p>
 
-<p>you can contact me at @xyz twitter handle.
+<p>you can contact me at anubhavrai_2k18ep014@dtu.ac.in.
 </p>
 </div>
 
