--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Arun </title>
+  <title>Anubhav Rai </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -59,7 +59,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Arun Vaishy</h1>
+      <h1>Anubhav Rai</h1>
       <p>I'm <span class="typed" data-typed-items="Student ,Code Geek, Competitive coder, Web Developer,  Machine Learning Enthusiast"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/vaishy_arun" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -80,10 +80,10 @@
         <!-- <div class="section-title">
           <h2>About</h2>
           <p>Hello everyone ,
-            My name is Arun Vaishy. I am Computer Science undergrad at Delhi Technological University (DTU) formerly known as the Delhi College of Engineering (DCE).
-            Currently living in Lucknow, a city in Uttar-Pradesh.
-            I love coding and i am passionate about Competitive Coding , Web Development, Machine Learning and desire to explore new fields.
-            My hobbies include Playing Football, watching movies & TV-series and listening music.</p>
+            My name is Anubhav Rai. I am Engineering Physics undergrad at Delhi Technological University (DTU) formerly known as the Delhi College of Engineering (DCE).
+            Currently living in Bhiwani Haryana.
+            I love coding and i am passionate about Coding , Web Development, Machine Learning and desire to explore new fields.
+            My hobbies include Playing volleyball, watching movies & TV-series and reading about economics.</p>
         </div> -->
 
         <div class="row">
@@ -95,10 +95,9 @@
             <!-- <p class="fst-italic"> --><p>
 
               Hello everyone ,
-                My name is Arun Vaishy. I am Computer Science undergrad at Delhi Technological University (DTU) formerly known as the Delhi College of Engineering (DCE).
-                Currently living in Lucknow, a city in Uttar-Pradesh.
-                I love coding and i am passionate about Competitive Coding , Web Development, Machine Learning and desire to explore new fields.
-                My hobbies include Playing Football, watching movies & TV-series and listening music.
+            My name is Anubhav Rai. I am Engineering Physics undergrad at Delhi Technological University (DTU) formerly known as the Delhi College of Engineering (DCE).
+            Currently living in Bhiwani Haryana.
+            I love coding and i am passionate about Coding , Web Development, Machine Learning and desire to explore new fields.
             </p>
             <br><br>
             <div class="row">
