--- a/index.html
+++ b/index.html
@@ -199,93 +199,8 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Resume <a href="https://drive.google.com/file/d/1pPQxV8lLJ-SqW_8aNardSmk0NK8dr5nC/view?usp=sharing" ><img src="assets/img/download2.png" alt="Download" width="40" height="40"></img></a></h2>
-
-          <!-- <a class= "btncls">View My CV</a> -->
-
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3 class="resume-title">EXPERIENCE</h3>
-
-            <div class="resume-item pb-0">
-              <h4>INHOUSE INTERN DTU</h4>
-              <h5>JUNE 2021 - Present</h5>
-              <!-- <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p> -->
-              <ul>
-                <li>Helped in college admissions using Data analysis in excel.</li>
-                <li>Applied Data pruning on the Collected data and Re-verified it.</li>
-
-              </ul>
-            </div>
-
-            <h3 class="resume-title">EXTRA-CURRICULAR</h3>
-            <div class="resume-item">
-              <h4>VOLUNTEER ENGIFEST (Cultural Fest DTU)</h4>
-              <!-- <h5>2015 - 2016</h5> -->
-              <ul>
-                <li>Publicized about various events and competitions conducted.</li>
-              </ul>
-
-              <p></p>
-            </div>
-            <div class="resume-item">
-              <h4>VOLUNTEER E-Cell DTU</h4>
-              <ul>
-                <li>Part of the organizerteam in Techstars Startup Weekend and E-Summit.</li>
-              </ul>
-              <!-- <h5>2010 - 2014</h5> -->
-              <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <h3 class="resume-title">ACHIEVEMENTS</h3>
-            <div class="resume-item">
-              <h4><a href="https://codeforces.com/profile/arunvaishy">CODEFORCES</a></h4>
-              <!-- <h5>2019 - Present</h5> -->
-              <!-- <p><em>Experion, New York, NY </em></p> -->
-              <ul>
-                <li>Specialist</li>
-                <li>Max. Rating : 1492</li>
-                <li>Codeforces Round 644 : World Rank : 1910</li>
-                <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4><a href="https://www.codechef.com/users/arunvaishy1003">CODECHEF</a></h4>
-              <!-- <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
-              <ul>
-                <li>4 Star</li>
-                <li>Max. Rating : 1935</li>
-                <li>August Lunchtime 2020 Div.2: World Rank : 120</li>
-                <li>July Lunchtime 2020 Div.2 : World Rank : 481</li>
-                <li>March Challenge 2020 Div.2 : World Rank : 521</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4><a href="https://www.hackerrank.com/arunvaishy1007">HACKERRANK</a></h4>
-              <!-- <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
-              <ul>
-                <li><a href="https://www.hackerrank.com/certificates/233346ec1f0c">Hackerrank Certified Programmerin Problem Solving</a></li>
-                <li><a href="https://www.hackerrank.com/certificates/7f1d444cba24">Hackerrank Certified in Python</a></li>
-
-
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
+    
+    <!-- End Resume Section -->
 
         <!-- ======= projects Section ======= -->
         <section id="projects" class="projects">
