--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 Mar 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://arunvaishy2000.github.io/arun/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-93544 56610</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New Delhi ,India</span></li>
+                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://github.com/Anubhav-Rai-Info</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-7015431317</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bhiwani, Haryana, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergrad</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>arunvaishy1007@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rai.anubhav@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>For Work:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -143,21 +143,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Data Structures and Algorithms <i class="val">95%</i></span>
+              <span class="skill">Data Structures and Algorithms <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">90%</i></span>
+              <span class="skill">HTML <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -170,7 +170,7 @@
 
 
             <div class="progress">
-              <span class="skill">Competitive Coding <i class="val">90%</i></span>
+              <span class="skill">Competitive Coding <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -178,18 +178,13 @@
 
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">80%</i></span>
+              <span class="skill">CSS <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Android Development <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
+      
 
           </div>
 
