--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <h1>Anubhav Rai</h1>
       <p>I'm <span class="typed" data-typed-items="Student ,Code Geek, Competitive coder, Web Developer,  Machine Learning Enthusiast"></span></p>
       <div class="social-links">
-        <a href="https://twitter.com/vaishy_arun" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/arunvaishy1007/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/_arun_vaishy/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/arunvaishy2000" class="google-plus"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/arunvaishy/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/anubhav_rai" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/anubhav_rai" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/anubhav_rai" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/anubhav_rai" class="google-plus"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/anubhav_rai" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -541,63 +541,19 @@
                 <h4>2018-2022</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I am a final year student pursuing a Bachelor's degree in the Computer Engineering branch with an 8.78 aggregate CGPA.
+                  I am a final year student pursuing a Bachelor's degree in the Engineering Physics branch.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End Education item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/jee.png" class="testimonial-img" alt="">
-                <h3>Joint Entrance Examination – Main (JEE Main)</h3>
-                <h4>2018</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Equipped 5531 AIR in JEE Mains.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End Education item -->
+            <!-- End Education item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/advance.jfif" class="testimonial-img" alt="">
-                <h3>Joint Entrance Examination – Advance (JEE Advance)</h3>
-                <h4>2018</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Equipped 8436 AIR in JEE Advance.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End Education item -->
+            <!-- End Education item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/hopehall.jfif" class="testimonial-img" alt="">
-                <h3>Hope Hall Foundation School</h3>
-                <h4>2015-2017</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Finished my Higher Secondary Education in Non-medical from the CBSE board with 90.20%.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End Education item -->
+            <!-- End Education item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/surya.jfif" class="testimonial-img" alt="">
-                <h3>Surya Public School</h3>
-                <h4>2013-2015</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Finished my Senior Secondary Education from the CBSE board with 9.0 CGPA.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End Education item -->
+            <!-- End Education item -->
 
 
 
@@ -623,19 +579,19 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Haidergarh, Barabanki UP India 225124</p>
+                  <p>Bhiwani, Haryana, India, 127021</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>arunvaishy1007@gmail.com</p>
+                  <p>rai.anubhav813@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+91-93544-56610</p>
+                  <p>+91-7015431317</p>
                 </div>
 
               </div>
@@ -685,12 +641,12 @@
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links">
 
-        <a href="https://twitter.com/vaishy_arun" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/arunvaishy1007/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/_arun_vaishy/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/arunvaishy2000" class="google-plus"><i class="bx bxl-github"></i></a>
+        <a href="https://twitter.com/anubhav_rai" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/anubhav_rai" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/anubhav_rai" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/anubhav_rai" class="google-plus"><i class="bx bxl-github"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="https://www.linkedin.com/in/arunvaishy/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/anubhav_rai" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>arun</span></strong>. All Rights Reserved
