--- a/index.html
+++ b/index.html
@@ -649,14 +649,14 @@
         <a href="https://www.linkedin.com/in/anubhav_rai" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>arun</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>anubhav</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="">arun</a>
+        Designed by <a href="">anubhav rai</a>
       </div>
     </div>
   </footer><!-- End Footer -->
