--- a/index.html
+++ b/index.html
@@ -216,11 +216,13 @@
                     </svg>
                     <i class="bx bxl-dribbble"></i>
                   </div>
-                  <h4><a href="https://github.com/arunvaishy2000/FACE-DETECTION-APP">FACE DETECTION APP</a></h4>
+                  <h4><a href="https://github.com/Anubhav-Rai-Info/hill-cipher">C++ PROJECT TO IMPLEMENT ENCRYPTION AND DECRYPTION USING HILL CIPHER ALGORITHM.</a></h4>
 
-                  <p>Developed an Android application for face detection and recognition
-                    using face detection API from the ML Kit provided by the Google
-                    Firebase and camera One API.
+                  <p>
+                   To encrypt the message, each block of n letters (considered as an n-component vector) was multiplied by an invertible n × n matrix,against modulus 26.
+                  </p>
+                  <p>
+                   To decrypt the message, each block was multiplied by the inverse of the matrix used for encryption.
                   </p>
                   <br>
                   <p>
