--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Anubhav Rai</h1>
-      <p>I'm <span class="typed" data-typed-items="Student ,Code Geek, Competitive coder, Web Developer,  Machine Learning Enthusiast"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Student ,Code Geek, Web Developer,  Machine Learning Enthusiast"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/anubhav_rai" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://www.facebook.com/anubhav_rai" class="facebook"><i class="bx bxl-facebook"></i></a>
