--- a/index.html
+++ b/index.html
@@ -507,15 +507,39 @@
               </div>
             </div><!-- End Education item -->
 
-            <!-- End Education item -->
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
 
-            <!-- End Education item -->
+      </div>
+    </section><!-- End Education Section -->
+    
+    
+    <!-- ======= Education Section ======= -->
+    <section id="Experience" class="testimonials section-bg">
+      <div class="container" data-aos="fade-up">
 
-            <!-- End Education item -->
+        <div class="section-title">
+          <h2>Education</h2>
+        </div>
 
-            <!-- End Education item -->
+        <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
 
 
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/toppr.jfif" class="testimonial-img" alt="">
+                <h3>Delhi Technological University</h3>
+                <h4>2018-2022</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  9 months work experience with Toppr Technologies ltd.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End Education item -->
 
           </div>
           <div class="swiper-pagination"></div>
