--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergrad</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rai.anubhav@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>For Work:</strong> <span>Available</span></li>
@@ -520,7 +520,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Education</h2>
+          <h2>Experience</h2>
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -531,11 +531,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/toppr.jfif" class="testimonial-img" alt="">
-                <h3>Delhi Technological University</h3>
-                <h4>2018-2022</h4>
+                
+                <h4>2019-2020</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  9 months work experience with Toppr Technologies ltd.
+                  9 months of work experience with Toppr Technologies Ltd.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -625,12 +625,12 @@
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links">
 
-        <a href="https://twitter.com/anubhav_rai" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/anubhav_rai" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/anubhav_rai" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/anubhav_rai" class="google-plus"><i class="bx bxl-github"></i></a>
+        <a href="https://twitter.com/" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/anubhav.rai.754" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/rai.anubhav813/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/Anubhav-Rai-Info" class="google-plus"><i class="bx bxl-github"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="https://www.linkedin.com/in/anubhav_rai" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/anubhav-rai-28559284/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>anubhav</span></strong>. All Rights Reserved
