--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <i class="bx bx-file"></i>
                   </div>
                   <h4><a href="https://github.com/Anubhav-Rai-Info/huffman-coding">TEXT COMPRESSOR</a></h4>
-                  <p>•Used the Huffman coding to perform the lossless data compression of text.</p>
+                  <p>Used the Huffman coding to perform the lossless data compression of text.</p>
                   <br>
                   <p>Language / Data structures: C++, Tree, priority queue, HashMap.</p>
                 </div>
