--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
       <p>I'm a <span class="typed" data-typed-items="Student ,Code Geek, Web Developer,  Machine Learning Enthusiast"></span></p>
       <div class="social-links">
         <a href="https://twitter.com/anubhav_rai" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/anubhav_rai" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/anubhav_rai" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://github.com/anubhav_rai" class="google-plus"><i class="bx bxl-github"></i></a>
-        <a href="https://www.linkedin.com/in/anubhav_rai" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/anubhav.rai.754" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/rai.anubhav813/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/Anubhav-Rai-Info" class="google-plus"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/anubhav-rai-28559284/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
