--- a/index.html
+++ b/index.html
@@ -282,49 +282,7 @@
 
 
         <!-- ======= Facts Section ======= -->
-        <section id="facts" class="facts">
-          <div class="container" data-aos="fade-up">
-
-            <div class="section-title">
-              <h2>Facts</h2>
-              <p>This is how i rate myself.</p>
-            </div>
-
-            <div class="row">
-
-              <div class="col-lg-3 col-md-6">
-                <div class="count-box">
-                  <i class="hardwork"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="96" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Hard Working</p>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-                <div class="count-box">
-                  <i class="confidence"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="99" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Confidence</p>
-                </div>
-              </div>
-
-              <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-                <div class="count-box">
-                  <i class="ambitious"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Ambitious</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-                <div class="count-box">
-                  <i class=" punctual"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="97" data-purecounter-duration="1" class="purecounter"></span>
-                  <p>Punctual</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section><!-- End Facts Section -->
+        <!-- End Facts Section -->
 
 
     <!-- ======= Portfolio Section ======= -->
